tests/verify/fail/assert-bool.rs
// error-pattern:

extern crate prusti_contracts;

fn foo(x: bool) {
    assert!(x);
}

fn main() {

}
